# C-Raycast-Renderer

./: CMakeLists.txt  config.h  main.c
Headers/: AppState.h
Headers/Objects/: DebugSquare.h  GameObject.h  Light.h  Object.h  Ray.h  Wall.h
Headers/Systems/: Debugger.h  InputManager.h  Physics.h  Raycast.h  Renderer.h  TextureManager.h
Headers/Tools/: Vector2.h  Vector3.h  Vector4.h
shaders/: OnlyPosition.vert.hlsl  SolidColor.frag.hlsl  triangle.frag.hlsl  triangle.vertex.hlsl
src/Math/: Vector2.c
src/Objects/: DebugSquare.c  GameObject.c  Player.c
src/Systems/: Debugger.c  InputManager.c  Light.c  Physics.c  Raycast.c  Renderer.c  TextureManager.c
src/Tools/: Vector2.c  Vector3.c  Vector4.c
